test-adrilab-com/http-redirect-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: test-adrilab-com
spec:
  parentRefs:
  - name: test-adrilab-com
    sectionName: http
  hostnames:
  - flask-app-gw.adrilab.com
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
