test-adrilab-com/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adrilab-com-route
  namespace: test-adrilab-com
spec:
  parentRefs:
  - name: test-adrilab-com
#  hostnames:
#  - "flask-app-gw.adrilab.com"
  rules:
  - backendRefs:
    - name: test-adrilab-com
  #    namespace: test-adrilab-com
      port: 80
